--- a/SASS/Project1/scss/style.scss
+++ b/SASS/Project1/scss/style.scss
@@ -1,2 +1,12 @@
+
+@import "base";
 @import "variables";
-@import "botones";
+@import "mixin";
+@import "container";
+@import "botton";
+@import "card";
+@import "navbar";
+
+
+
+
