--- a/SASS/bot/scss/custom.scss
+++ b/SASS/bot/scss/custom.scss
@@ -29,4 +29,23 @@
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../node_modules/bootstrap/scss/utilities/api";
 
+@import "../node_modules/bootstrap/scss/dropdown";
+@import "../node_modules/bootstrap/scss/buttons";
+@import "../node_modules/bootstrap/scss/navbar";
+@import "../node_modules/bootstrap/scss/card";
+
 // 8. Add additional custom code here
+img {
+    max-width: 100%;
+  }
+$body-color: #fff;
+$primary-color: purple;
+$seconary-color:orange;
+$danger:red;
+$terciary-color: gray;
+$body-bg: $terciary-color;
+$border-radius: 10%;
+$boder-width: 1px;
+
+
+
