--- a/SASS/bot/scss/custom.scss
+++ b/SASS/bot/scss/custom.scss
@@ -38,14 +38,15 @@
 img {
     max-width: 100%;
   }
-$body-color: #fff;
+$body-color: #bd1e1e;
 $primary-color: purple;
 $seconary-color:orange;
 $danger:red;
-$terciary-color: gray;
+$terciary-color:grey;
 $body-bg: $terciary-color;
 $border-radius: 10%;
 $boder-width: 1px;
+
 
 
 
