--- a/SASS/conAngular/angulasSassBootstrap/src/app/app.component.html
+++ b/SASS/conAngular/angulasSassBootstrap/src/app/app.component.html
@@ -2,4 +2,6 @@
 <app-card></app-card>
 <app-footer></app-footer>
 <app-navbar></app-navbar>
+<app-tabla></app-tabla>
+
 <router-outlet></router-outlet>
